Cleaning up spacing issues

--- a/static/base.css
+++ b/static/base.css
@@ -138,9 +138,8 @@ li code {
 
 ul,
 ol {
-    padding-top: 0.5rem;
+    margin-top: 1rem;
     margin-left: 0.25rem;
-    margin-bottom: 0;
 }
 
 ul li {
@@ -156,7 +155,7 @@ ol ul,
 ul ol,
 ol ol {
     padding-left: 1.25rem;
-    margin-top: 0;
+    margin-top: 0.25rem;
 }
 
 li {
